--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
     "node": "17.0.1",
     "npm": "8.1.0"
   },
-  "scripts":  {
-   "test": "echo \"Error: no test specified\" && exit 1",
-   "start": "webpack --watch --mode=development",
-   "postinstall": "webpack"  
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,6 +23,10 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.8",
     "babel-loader": "^8.2.3",
     "install": "^0.13.0",
     "npm": "^8.3.0",
